--- a/JupyterLab/MatplotlibAnimation.ipynb
+++ b/JupyterLab/MatplotlibAnimation.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# Embedding Matplotlib Animations in Jupyter as Interactive JavaScript Widgets\n",
     "\n",
+    "Written by Jean M Favre, Swiss National Supercomputing Center.\n",
+    "Tested on Piz Daint Thu 01 Oct 2020 08:38:49 AM CEST\n",
+    "\n",
     "See http://louistiao.me/posts/notebooks/embedding-matplotlib-animations-in-jupyter-as-interactive-javascript-widgets/\n",
     "\n",
     "On Piz Daint, a video can also be saved to disk using the FFmpeg module.\n",
