--- a/JupyterLab/ipywidgets.Isabel.ipynb
+++ b/JupyterLab/ipywidgets.Isabel.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize weather data from https://www.earthsystemgrid.org/dataset/isabeldata.html"
+    "# Visualize weather data from https://www.earthsystemgrid.org/dataset/isabeldata.html\n",
+    "\n",
+    "Written by Jean M Favre, Swiss National Supercomputing Center.\n",
+    "Tested on Piz Daint Thu 01 Oct 2020 08:38:49 AM CEST"
    ]
   },
   {
@@ -16,8 +19,7 @@
     "import gzip\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation, rc\n",
-    "from itkwidgets import view,line_profile"
+    "from ipywidgets import interact"
    ]
   },
   {
@@ -48,10 +50,10 @@
    "source": [
     "dims = [500,500,100] # original dimensions of binary data in disk file\n",
     "\n",
-    "def load_slice(frame_number, K):\n",
+    "def load_slice(frame_number=1, K=50):\n",
     "  assert frame_number >= 1 and frame_number <= 48\n",
-    "  fname_gzipped = format('/scratch/snx3000/jfavre/Isabel/QVAPORf%02d.bin.gz' % frame_number)\n",
-    "  print(\"opening \", fname_gzipped)\n",
+    "  fname_gzipped = format('/users/jfavre/Downloads/QVAPORf%02d.bin.gz' % frame_number)\n",
+    "  #print(\"opening \", fname_gzipped)\n",
     "  with gzip.open(fname_gzipped,'rb') as f:\n",
     "    # to read a single slice in the Z direction, we slice the array in the Z direction\n",
     "    data = np.frombuffer(f.read(), dtype='>f4')[dims[0]*dims[1]*K:dims[0]*dims[1]*(K+1)]\n",
@@ -59,17 +61,7 @@
     "    data = np.where(data!=1e35, data,np.NaN)\n",
     "    data = data.reshape(dims[0:2])\n",
     "    data = np.fliplr(np.rot90(data,-1))\n",
-    "  return data\n",
-    "\n",
-    "def load_volume(frame_number):\n",
-    "  assert frame_number >= 1 and frame_number <= 48\n",
-    "  fname_gzipped = format('/scratch/snx3000/jfavre/Isabel/QVAPORf%02d.bin.gz' % frame_number)\n",
-    "  print(\"opening \", fname_gzipped)\n",
-    "  with gzip.open(fname_gzipped,'rb') as f:\n",
-    "    data = np.frombuffer(f.read(), dtype='>f4')\n",
-    "    # Land values, where there is no valid atmospheric data, are marked 1.0e35\n",
-    "    data = np.where(data!=1e35, data,np.NaN)\n",
-    "  return data.reshape(np.flip(dims))"
+    "  return data"
    ]
   },
   {
@@ -78,51 +70,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(6,6))\n",
-    "\n",
-    "dataS = load_slice(48, 50) # last timestep and Z=50 slice\n",
-    "image = plt.imshow(dataS, extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def animate(i):\n",
-    "    image.set_data(load_slice(i, 50))\n",
-    "    return (image,)\n",
-    "\n",
-    "anim = animation.FuncAnimation(fig, animate, frames=[i for i in range(1,49)], blit=True)\n",
-    "# creating an interactive JavaScript animation widget \n",
-    "rc('animation', html='jshtml')\n",
-    "anim"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Demonstrating the itkwidget view, and line_profile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view(image=dataS, cmap=\"Muted Blue-Green\",vmin=np.nanmin(dataS), vmax=np.nanmax(dataS))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_profile(image=dataS, cmap=\"Muted Blue-Green\",plotter='ipympl')"
+    "def animate():\n",
+    "    def display_slice_in_time(time=48):\n",
+    "        plt.imshow(load_slice(time), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
+    "        plt.title('Timestep: %d' % time)\n",
+    "        plt.show()\n",
+    "    interact(display_slice_in_time, time=(1,48))\n",
+    "    \n",
+    "animate()"
    ]
   }
  ],
