--- a/RayTracing/PBR.ipynb
+++ b/RayTracing/PBR.ipynb
@@ -11,10 +11,10 @@
     "#### disable automatic camera reset on 'Show'\n",
     "paraview.simple._DisableFirstRenderCameraReset()\n",
     "\n",
-    "mf1 = \"/users/jfavre/Projects/ParaView/ospray_mats.json\"\n",
-    "materialLibrary1 = GetMaterialLibrary()\n",
-    "print(\"using materials: {:}\".format(mf1))\n",
-    "materialLibrary1.LoadMaterials = mf1\n",
+    "#mf1 = \"/users/jfavre/Projects/ParaView/ospray_mats.json\"\n",
+    "#materialLibrary1 = GetMaterialLibrary()\n",
+    "#print(\"using materials: {:}\".format(mf1))\n",
+    "#materialLibrary1.LoadMaterials = mf1\n",
     "\n",
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
@@ -74,7 +74,7 @@
     "renderView1.OrientationAxesVisibility = 0\n",
     "\n",
     "renderView1.EnableRayTracing = 0 # Classic OpenGL\n",
-    "renderView1.OSPRayMaterialLibrary = materialLibrary1"
+    "#renderView1.OSPRayMaterialLibrary = materialLibrary1"
    ]
   },
   {
@@ -149,10 +149,44 @@
    "source": [
     "# Switch to PBR Shading\n",
     "torus.Interpolation = 'PBR'\n",
-    "torus.Metallic = 1\n",
-    "torus.Roughness = 0.4 # how glossy is the material?\n",
+    "torus.Metallic = .5\n",
+    "# how glossy is the material? glossy materials have a low roughness value\n",
+    "torus.Roughness = 0.9\n",
     "torus.AmbientColor = [1.0, 0.666, 0.5]\n",
     "torus.DiffuseColor = [1.0, 0.666, 0.5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image-Based Lighting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Glossy materials (low roughness value) are reflecting the environment with a technique called Image-Based Lighting that is supported by the PBR shading model\n",
+    "\n",
+    "The environment is made of a cubemap texture which is a texture consisting of 6 seamless images for the 6 different directions of the 3D space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a cubemap texture. https://hdrihaven.com/hdris/ has lots of examples\n",
+    "palermo_sidewalk_2k = CreateTexture(\"../Data/palermo_sidewalk_2k.jpg\")\n",
+    "\n",
+    "# make the material glossy and hide the three planes for a moment\n",
+    "torus.Roughness = 0.\n",
+    "\n",
+    "renderView1.UseSkyboxBackground = 1\n",
+    "renderView1.UseEnvironmentLighting = 1\n",
+    "renderView1.BackgroundTexture = palermo_sidewalk_2k\n"
    ]
   },
   {
