added interacive sliders to PBR demo

--- a/RayTracing/PBR.ipynb
+++ b/RayTracing/PBR.ipynb
@@ -6,15 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import interact\n",
     "from paraview.simple import *\n",
     "print(\"Using \", GetParaViewSourceVersion())\n",
     "#### disable automatic camera reset on 'Show'\n",
     "paraview.simple._DisableFirstRenderCameraReset()\n",
-    "\n",
-    "#mf1 = \"/users/jfavre/Projects/ParaView/ospray_mats.json\"\n",
-    "#materialLibrary1 = GetMaterialLibrary()\n",
-    "#print(\"using materials: {:}\".format(mf1))\n",
-    "#materialLibrary1.LoadMaterials = mf1\n",
     "\n",
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
@@ -73,8 +69,7 @@
     "renderView1 = GetRenderView()\n",
     "renderView1.OrientationAxesVisibility = 0\n",
     "\n",
-    "renderView1.EnableRayTracing = 0 # Classic OpenGL\n",
-    "#renderView1.OSPRayMaterialLibrary = materialLibrary1"
+    "renderView1.EnableRayTracing = 0 # Classic OpenGL"
    ]
   },
   {
@@ -153,7 +148,14 @@
     "# how glossy is the material? glossy materials have a low roughness value\n",
     "torus.Roughness = 0.9\n",
     "torus.AmbientColor = [1.0, 0.666, 0.5]\n",
-    "torus.DiffuseColor = [1.0, 0.666, 0.5]"
+    "torus.DiffuseColor = [1.0, 0.666, 0.5]\n",
+    "\n",
+    "from ipywidgets import FloatSlider\n",
+    "def ChangeRoughnessMetallicity(R, M):\n",
+    "    torus.Roughness = R\n",
+    "    torus.Metallic = M\n",
+    "    \n",
+    "interact(ChangeRoughnessMetallicity, R=(0,1.), M=(0,1.))"
    ]
   },
   {
@@ -183,7 +185,9 @@
     "\n",
     "# make the material glossy and hide the three planes for a moment\n",
     "torus.Roughness = 0.\n",
-    "\n",
+    "Hide(plane1)\n",
+    "Hide(plane2)\n",
+    "Hide(plane3)\n",
     "renderView1.UseSkyboxBackground = 1\n",
     "renderView1.UseEnvironmentLighting = 1\n",
     "renderView1.BackgroundTexture = palermo_sidewalk_2k\n"
