--- a/JupyterLab/MatplotlibAnimation.ipynb
+++ b/JupyterLab/MatplotlibAnimation.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib widget"
    ]
   },
   {
@@ -109,17 +109,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writervideo = animation.FFMpegWriter(fps=60, codec='mpeg4') \n",
-    "\n",
-    "anim.save(\"/users/jfavre/movie2.mp4\", writer=writervideo)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,6 +139,17 @@
    "source": [
     "rc('animation', html='jshtml')\n",
     "anim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writervideo = animation.FFMpegWriter(fps=60, codec='mpeg4') \n",
+    "\n",
+    "anim.save(\"/users/jfavre/movie2.mp4\", writer=writervideo)"
    ]
   }
  ],
