--- a/JupyterLab/ipywidgets.Isabel.ipynb
+++ b/JupyterLab/ipywidgets.Isabel.ipynb
@@ -52,13 +52,13 @@
     "\n",
     "def load_slice(frame_number=1, K=50):\n",
     "  assert frame_number >= 1 and frame_number <= 48\n",
-    "  fname_gzipped = format('/users/jfavre/Downloads/QVAPORf%02d.bin.gz' % frame_number)\n",
+    "  fname_gzipped = format('/scratch/snx3000/jfavre/Isabel/QVAPORf%02d.bin.gz' % frame_number)\n",
     "  #print(\"opening \", fname_gzipped)\n",
     "  with gzip.open(fname_gzipped,'rb') as f:\n",
-    "    # to read a single slice in the Z direction, we slice the array in the Z direction\n",
+    "    # read a single slice in the Z direction by slicing the volume\n",
     "    data = np.frombuffer(f.read(), dtype='>f4')[dims[0]*dims[1]*K:dims[0]*dims[1]*(K+1)]\n",
     "    # Land values, where there is no valid atmospheric data, are marked 1.0e35\n",
-    "    data = np.where(data!=1e35, data,np.NaN)\n",
+    "    data = np.where(data!=1e35, data, np.NaN)\n",
     "    data = data.reshape(dims[0:2])\n",
     "    data = np.fliplr(np.rot90(data,-1))\n",
     "  return data"
@@ -71,11 +71,11 @@
    "outputs": [],
    "source": [
     "def animate():\n",
-    "    def display_slice_in_time(time=48):\n",
-    "        plt.imshow(load_slice(time), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
+    "    def display_slice_in_time(time=48, K=50):\n",
+    "        plt.imshow(load_slice(time,K), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
     "        plt.title('Timestep: %d' % time)\n",
     "        plt.show()\n",
-    "    interact(display_slice_in_time, time=(1,48))\n",
+    "    interact(display_slice_in_time, time=(1,48), K=(0,99))\n",
     "    \n",
     "animate()"
    ]
@@ -97,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
