--- a/ParaView/Hello_Sphere-ParaView.1.ipynb
+++ b/ParaView/Hello_Sphere-ParaView.1.ipynb
@@ -82,6 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save an image on Piz Daint's file system\n",
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
     "  img_writer = vtkPNGWriter()\n",
@@ -89,7 +90,7 @@
     "  img_writer.SetFileName(filename)\n",
     "  img_writer.Write()\n",
     "\n",
-    "SaveImage(\"/home/jfavre/foo2.png\")"
+    "SaveImage(\"/users/jfavre/foo2.png\")"
    ]
   }
  ],
@@ -109,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
