--- a/JupyterLab/itkwidgets.Isabel.ipynb
+++ b/JupyterLab/itkwidgets.Isabel.ipynb
@@ -53,10 +53,10 @@
     "\n",
     "def load_slice(frame_number, K):\n",
     "  assert frame_number >= 1 and frame_number <= 48\n",
-    "  fname_gzipped = format('/users/jfavre/Downloads/QVAPORf%02d.bin.gz' % frame_number)\n",
+    "  fname_gzipped = format('/scratch/snx3000/jfavre/Isabel/QVAPORf%02d.bin.gz' % frame_number)\n",
     "  print(\"opening \", fname_gzipped)\n",
     "  with gzip.open(fname_gzipped,'rb') as f:\n",
-    "    # to read a single slice in the Z direction, we slice the array in the Z direction\n",
+    "    # read a single slice in the Z direction by slicing the volume\n",
     "    data = np.frombuffer(f.read(), dtype='>f4')[dims[0]*dims[1]*K:dims[0]*dims[1]*(K+1)]\n",
     "    # Land values, where there is no valid atmospheric data, are marked 1.0e35\n",
     "    data = np.where(data!=1e35, data,np.NaN)\n",
@@ -66,7 +66,7 @@
     "\n",
     "def load_volume(frame_number):\n",
     "  assert frame_number >= 1 and frame_number <= 48\n",
-    "  fname_gzipped = format('/users/jfavre/Downloads/QVAPORf%02d.bin.gz' % frame_number)\n",
+    "  fname_gzipped = format('/scratch/snx3000/jfavre/Isabel/QVAPORf%02d.bin.gz' % frame_number)\n",
     "  print(\"opening \", fname_gzipped)\n",
     "  with gzip.open(fname_gzipped,'rb') as f:\n",
     "    data = np.frombuffer(f.read(), dtype='>f4')\n",
@@ -109,7 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_profile(image=dataS, cmap=\"Muted Blue-Green\",plotter='ipympl')"
+    "lp = line_profile(image=dataS, cmap=\"Muted Blue-Green\",plotter='ipympl')\n",
+    "lp"
    ]
   },
   {
@@ -157,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
