remove solution to exercise

--- a/JupyterLab/ipywidgets.Isabel.ipynb
+++ b/JupyterLab/ipywidgets.Isabel.ipynb
@@ -71,14 +71,21 @@
    "outputs": [],
    "source": [
     "def animate():\n",
-    "    def display_slice_in_time(time=48, K=50):\n",
-    "        plt.imshow(load_slice(time,K), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
+    "    def display_slice_in_time(time=48):\n",
+    "        plt.imshow(load_slice(time), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
     "        plt.title('Timestep: %d' % time)\n",
     "        plt.show()\n",
-    "    interact(display_slice_in_time, time=(1,48), K=(0,99))\n",
+    "    interact(display_slice_in_time, time=(1,48))\n",
     "    \n",
     "animate()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -97,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
