--- a/ParaView/NumpyArrays-ParaView-Import.ipynb
+++ b/ParaView/NumpyArrays-ParaView-Import.ipynb
@@ -79,7 +79,7 @@
     "    def __init__(self):\n",
     "        self.__mesh = vtk.vtkRectilinearGrid()\n",
     "        self.__dims = [-1,-1,-1]\n",
-    "    \n",
+    "\n",
     "    def SetCoordinates(self, cArray0, cArray1, cArray2):\n",
     "        assert len(cArray0.shape) == 1\n",
     "        self.__mesh.SetXCoordinates(vtknp.numpy_to_vtk(cArray0))\n",
@@ -94,17 +94,17 @@
     "        self.__dims[2] = cArray2.shape[0]\n",
     "        \n",
     "        self.__mesh.SetDimensions(self.__dims)\n",
-    "        \n",
+    "\n",
     "    def GetDimensions(self):\n",
     "        return self.__mesh.GetDimensions()\n",
-    "        \n",
+    "\n",
     "    def AddArray(self, dArray, name):\n",
     "        assert np.prod(dArray.shape) == np.prod(self.__dims)\n",
     "        vtkarr = vtknp.numpy_to_vtk(dArray.ravel())\n",
     "        vtkarr.SetName(name)\n",
     "        self.__mesh.GetPointData().AddArray(vtkarr)\n",
-    "        #if len(dArray.shape) == 1:\n",
-    "          #self.__mesh.GetPointData().SetActiveScalars(name)\n",
+    "        self.__mesh.GetPointData().SetActiveScalars(name)\n",
+    "\n",
     "    def GetOutput(self):\n",
     "        return self.__mesh\n",
     "\n",
@@ -182,7 +182,7 @@
     "\n",
     "from vtk.util.vtkImageImportFromArray import vtkImageImportFromArray\n",
     "iD = vtkImageImportFromArray()\n",
-    "iD.SetArray(data)\n",
+    "iD.SetArray(data) # it is given the name \"scalars\" by default\n",
     "iD.SetDataOrigin((bounds[0], bounds[2], bounds[4]))\n",
     "iD.SetDataSpacing(((bounds[1]-bounds[0])/(dims[0]-1),\n",
     "                   (bounds[3]-bounds[2])/(dims[0]-1),\n",
@@ -270,7 +270,7 @@
     "pVTrivialProducer1.UpdatePipeline()\n",
     "\n",
     "rep1 = Show(pVTrivialProducer1)\n",
-    "rep1.Representation = 'Surface'"
+    "rep1.Representation = 'Surface With Edges'"
    ]
   },
   {
@@ -279,9 +279,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ResetCamera()\n",
+    "ResetCamera()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rep1.Representation = 'Surface'\n",
-    "ColorBy(rep1, \"scalars\")"
+    "ColorBy(rep1, 'scalars')"
    ]
   },
   {
