--- a/ParaView/NumpyArrays-ParaView-Import.ipynb
+++ b/ParaView/NumpyArrays-ParaView-Import.ipynb
@@ -383,7 +383,7 @@
     "PC.AddArray(X[:,0]*X[:,0] + X[:,1]*X[:,1] + X[:,2]*X[:,2], \"distancesq\")\n",
     "PC.AddArray(X[:,0], \"X\")\n",
     "\n",
-    "print(\"Point Cloud has \", PC.GetOutput().GetNumberOfPoints())\n",
+    "print(\"Point Cloud has\", PC.GetOutput().GetNumberOfPoints(), \"vertices\")\n",
     "# create a new 'PVTrivialProducer'\n",
     "pVTrivialProducer3 = PVTrivialProducer(guiName=\"Point Cloud\")\n",
     "obj = pVTrivialProducer3.GetClientSideObject()\n",
