--- a/ParaView/NumpyArrays-ParaView-Import.ipynb
+++ b/ParaView/NumpyArrays-ParaView-Import.ipynb
@@ -400,8 +400,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ResetCamera()"
+    "# saving data is trivially done, just like in the GUI of ParaView.\n",
+    "# Using the GUI, you would save the Active Source,\n",
+    "# In batch mode, we can save any object in the visualization pipeline\n",
+    "# by using its proxyname"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SaveData(\"/users/jfavre/uniformGrid.vti\",     proxy=pVTrivialProducer0)\n",
+    "SaveData(\"/users/jfavre/rectilinearGrid.vtr\", proxy=pVTrivialProducer1)\n",
+    "SaveData(\"/users/jfavre/structuredGrid.vts\",  proxy=pVTrivialProducer2)\n",
+    "SaveData(\"/users/jfavre/pointcloud.vtp\",      proxy=pVTrivialProducer3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
