added an interact()

--- a/RayTracing/ThreeTeapots.Depth-of-field.ipynb
+++ b/RayTracing/ThreeTeapots.Depth-of-field.ipynb
@@ -271,6 +271,28 @@
     "camera.SetFocalDistance(14)\n",
     "camera.SetFocalDisk(.2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact\n",
+    "\n",
+    "def DepthOfField(distance, focalDisk):\n",
+    "    camera.SetFocalDistance(distance)\n",
+    "    camera.SetFocalDisk(focalDisk)\n",
+    "\n",
+    "interact(DepthOfField, distance=(1,50), focalDisk=(0.,3.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
