adding an imshow of teh cubemap

--- a/RayTracing/PBR.ipynb
+++ b/RayTracing/PBR.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "from ipywidgets import interact\n",
     "from paraview.simple import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
     "print(\"Using \", GetParaViewSourceVersion())\n",
     "#### disable automatic camera reset on 'Show'\n",
     "paraview.simple._DisableFirstRenderCameraReset()\n",
@@ -150,12 +152,11 @@
     "torus.AmbientColor = [1.0, 0.666, 0.5]\n",
     "torus.DiffuseColor = [1.0, 0.666, 0.5]\n",
     "\n",
-    "from ipywidgets import FloatSlider\n",
-    "def ChangeRoughnessMetallicity(R, M):\n",
-    "    torus.Roughness = R\n",
-    "    torus.Metallic = M\n",
+    "def ChangeRoughnessMetallicity(Roughness, Metallicity):\n",
+    "    torus.Roughness = Roughness\n",
+    "    torus.Metallic = Metallicity\n",
     "    \n",
-    "interact(ChangeRoughnessMetallicity, R=(0,1.), M=(0,1.))"
+    "interact(ChangeRoughnessMetallicity, Roughness=(0.,1.), Metallicity=(0.,1.))"
    ]
   },
   {
@@ -181,16 +182,28 @@
    "outputs": [],
    "source": [
     "# Load a cubemap texture. https://hdrihaven.com/hdris/ has lots of examples\n",
-    "palermo_sidewalk_2k = CreateTexture(\"../Data/palermo_sidewalk_2k.jpg\")\n",
-    "\n",
+    "imgFileName = \"../Data/palermo_sidewalk_2k.jpg\"\n",
+    "img = mpimg.imread(imgFileName)\n",
+    "fig, ax = plt.subplots(figsize=(8,4))\n",
+    "imgplot = ax.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# make the material glossy and hide the three planes for a moment\n",
     "torus.Roughness = 0.\n",
     "Hide(plane1)\n",
     "Hide(plane2)\n",
     "Hide(plane3)\n",
+    "\n",
+    "cubemap = CreateTexture(imgFileName)\n",
     "renderView1.UseSkyboxBackground = 1\n",
     "renderView1.UseEnvironmentLighting = 1\n",
-    "renderView1.BackgroundTexture = palermo_sidewalk_2k\n"
+    "renderView1.BackgroundTexture = cubemap"
    ]
   },
   {
