--- a/JupyterLab/ipywidgets.Isabel.ipynb
+++ b/JupyterLab/ipywidgets.Isabel.ipynb
@@ -19,7 +19,8 @@
     "import gzip\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact"
+    "from ipywidgets import interact\n",
+    "from matplotlib import animation, rc"
    ]
   },
   {
@@ -72,12 +73,70 @@
    "source": [
     "def animate():\n",
     "    def display_slice_in_time(time=48):\n",
-    "        plt.imshow(load_slice(time), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
+    "        plt.imshow(load_slice(time, 0), extent=[83, 62, 23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
     "        plt.title('Timestep: %d' % time)\n",
     "        plt.show()\n",
     "    interact(display_slice_in_time, time=(1,48))\n",
     "    \n",
     "animate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "# framenumber = 1 and K=0 would be the default values\n",
+    "image = plt.imshow(load_slice(1,0), extent=[83, 62,23.7, 41.7], cmap=plt.get_cmap(\"PuBuGn\"))\n",
+    "\n",
+    "def display_slice_in_time(time=48):\n",
+    "    image.set_data(load_slice(time,0))\n",
+    "    return(image,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anim = animation.FuncAnimation(fig, display_slice_in_time,frames=[i for i in range(1,49,1)],\n",
+    "                               blit=True)\n",
+    "#rc('animation', html='jshtml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An animation from begining to end can also be saved directly to disk as an MPEG video file\n",
+    "writervideo = animation.FFMpegWriter(fps=30, codec='theora') \n",
+    "MovieFileName = \"/users/jfavre/movie2.ogv\"\n",
+    "anim.save(MovieFileName, writer=writervideo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import Video\n",
+    "video = Video.from_file(MovieFileName)\n",
+    "video"
    ]
   },
   {
@@ -104,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
