--- a/JupyterLab/ipywidgets.Isabel.ipynb
+++ b/JupyterLab/ipywidgets.Isabel.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "# An animation from begining to end can also be saved directly to disk as an MPEG video file\n",
     "writervideo = animation.FFMpegWriter(fps=30, codec='theora') \n",
-    "MovieFileName = \"/users/jfavre/movie2.ogv\"\n",
+    "MovieFileName = \"/dev/shm/movie2.ogv\"\n",
     "anim.save(MovieFileName, writer=writervideo)"
    ]
   },
