cleaning up video creation

--- a/ParaView/GenerateTimeSeries.ipynb
+++ b/ParaView/GenerateTimeSeries.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from paraview.simple import *\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from paraview.simple import *"
    ]
   },
   {
@@ -29,7 +29,8 @@
     "outInfo.Set(vtk.vtkAlgorithm.CAN_PRODUCE_SUB_EXTENT(), 1)\n",
     "\n",
     "# advertize that we can produce N timesteps, and give the timestep values\n",
-    "timesteps = np.arange(32)*.1\n",
+    "N=128\n",
+    "timesteps = np.arange(N)*.1\n",
     "outInfo.Remove(executive.TIME_STEPS())\n",
     "for timestep in timesteps:\n",
     "  outInfo.Append(executive.TIME_STEPS(), timestep)\n",
@@ -77,7 +78,7 @@
    "outputs": [],
    "source": [
     "programmableSource1 = ProgrammableSource()\n",
-    "programmableSource1.OutputDataSetType = 'vtkImageData'\n",
+    "programmableSource1.OutputDataSetType = \"vtkImageData\"\n",
     "programmableSource1.Script = RequestData\n",
     "programmableSource1.ScriptRequestInformation = RequestInfo\n",
     "programmableSource1.UpdatePipelineInformation()"
@@ -91,7 +92,7 @@
    "source": [
     "rep = Show()\n",
     "rep.Representation = \"Surface\"\n",
-    "rep.ColorArrayName = ['POINTS', 'scalarA']"
+    "rep.ColorArrayName = [\"POINTS\", \"scalarA\"]"
    ]
   },
   {
@@ -101,6 +102,7 @@
    "outputs": [],
    "source": [
     "view = GetRenderView()\n",
+    "view.ViewSize = [600,600]\n",
     "view.CenterOfRotation = [11.5, 11.5, 11.5]\n",
     "view.CameraPosition = [-23.571178826671265, 48.60210090801749, 74.13620782160231]\n",
     "view.CameraFocalPoint = [11.5, 11.5, 11.5]\n",
@@ -108,8 +110,9 @@
     "view.CameraParallelScale = 19.91858428704209\n",
     "\n",
     "from ipyparaview.widgets import PVDisplay\n",
-    "disp = PVDisplay(view)\n",
-    "w = display(disp)"
+    "\n",
+    "pvdisp = PVDisplay(view)\n",
+    "w = display(pvdisp)"
    ]
   },
   {
@@ -118,7 +121,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SaveData('ts.vti', Writetimestepsasfileseries=1, Filenamesuffix='_%02d')"
+    "def SaveImage(filename):\n",
+    "    from vtk import vtkPNGWriter\n",
+    "    img_writer = vtkPNGWriter()\n",
+    "    img_writer.SetInputConnection(pvdisp.w2i.GetOutputPort())\n",
+    "    img_writer.SetFileName(filename)\n",
+    "    img_writer.Write()\n",
+    "\n",
+    "\n",
+    "# Interact from ipywidgets gives us a simple way to interactively control values\n",
+    "# with a callback function\n",
+    "from ipywidgets import IntSlider, interact\n",
+    "\n",
+    "\n",
+    "# change the timestep\n",
+    "def Animate(t):\n",
+    "    view.ViewTime = programmableSource1.TimestepValues[t]\n",
+    "\n",
+    "\n",
+    "i = interact(Animate, t=IntSlider(min=0, max=127, step=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save all images to disk and encode into a movie\n",
+    "for i, t in enumerate(programmableSource1.TimestepValues):\n",
+    "    view.ViewTime = t\n",
+    "    SaveImage(format(\"/dev/shm/animation_%06d.png\" % i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for better video quality, here we use 9\n",
+    "!ffmpeg -i /dev/shm/animation_%06d.png -c:v libtheora -q:v 9 /dev/shm/animation.ogv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import Video\n",
+    "\n",
+    "video = Video.from_file(\"/dev/shm/animation.ogv\")\n",
+    "video"
    ]
   },
   {
