fix path of vtkGridConstructors.py. Make it the current dir

--- a/ParaView/pvTestGridConstructors-VTK.ipynb
+++ b/ParaView/pvTestGridConstructors-VTK.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itkwidgets import view\n",
-    "import numpy as np\n",
-    "import sys\n",
-    "sys.path.append(\"/users/jfavre/Projects/ParaView/Python\")\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from vtkGridConstructors import *\n",
     "\n",
-    "# Tested Thu May 13 19:10:18 CEST 2021"
+    "# Tested Sun May 16 12:50:07 CEST 2021"
    ]
   },
   {
@@ -24,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,24 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17c93bee6f2f4174a9dfbbab760d8164",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(geometries=[{'vtkClass': 'vtkPolyData', 'points': {'vtkClass': 'vtkPoints', 'name': '_points', 'numberO…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v0 = view(geometries=[G.GetOutput(), edges])\n",
     "v0"
@@ -115,18 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mesh dimensions =  (64, 64, 64)\n",
-      "data scalar range =  (0.07558578987150362, 300.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dims = [64,64,64]\n",
     "bounds = (-10.0, 10.0, -10.0, 10.0,-10.0, 10.0)\n",
@@ -165,24 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cbe81079f554e06b56931f0e5cbf5dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(geometries=[{'vtkClass': 'vtkPolyData', 'points': {'vtkClass': 'vtkPoints', 'name': '_points', 'numberO…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#view(geometries=[iD.GetOutput(), edges])\n",
     "v1 = view(image=iD.GetOutput(), geometries=[edges])\n",
