remove path to personal disk space

--- a/ParaView/Hello_Sphere-ParaView.1.ipynb
+++ b/ParaView/Hello_Sphere-ParaView.1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ParaView Version  5.9\n",
+      "Vendor:   NVIDIA Corporation\n",
+      "Version:  4.6.0 NVIDIA 450.51.05\n",
+      "Renderer: Tesla P100-PCIE-16GB/PCIe/SSE2\n"
+     ]
+    }
+   ],
    "source": [
     "Version = str(GetParaViewVersion())\n",
     "info = GetOpenGLInformation(location=servermanager.vtkSMSession.RENDER_SERVER)\n",
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +59,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da4786dc5d3b4d71b559df828e1566a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PVDisplay(resolution=(400, 400))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view = GetRenderView()\n",
+    "from ipyparaview.widgets import PVDisplay\n",
+    "pvdisp = PVDisplay(view)\n",
+    "w = display(pvdisp)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "view = GetRenderView()\n",
-    "from ipyparaview.widgets import PVDisplay\n",
-    "disp = PVDisplay(view)\n",
-    "w = display(disp)"
+    "# Any ParaView object has a list of animatable parameters\n",
+    "sphere.ListProperties()"
    ]
   },
   {
@@ -67,6 +103,7 @@
     "# Interact from ipywidgets gives us a simple way to interactively control values\n",
     "# with a callback function\n",
     "from ipywidgets import interact, IntSlider\n",
+    "\n",
     "\n",
     "# set the Theta and Phi resolution and trigger a pipeline update\n",
     "def Sphere_resolution(res):\n",
@@ -82,16 +119,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save an image on Piz Daint's file system\n",
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
     "  img_writer = vtkPNGWriter()\n",
-    "  img_writer.SetInputConnection(disp.w2i.GetOutputPort())\n",
+    "  img_writer.SetInputConnection(pvdisp.w2i.GetOutputPort())\n",
     "  img_writer.SetFileName(filename)\n",
     "  img_writer.Write()\n",
     "\n",
-    "SaveImage(\"/users/jfavre/foo2.png\")"
+    "#SaveImage(\"/users/jfavre/foo2.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def animate():\n",
+    "  for i in range(48):\n",
+    "    Sphere_resolution(i)\n",
+    "    SaveImage(format(\"/dev/shm/foo%02d.png\" % i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm /scratch/snx3000/jfavre/foo.ogg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ffmpeg -i /dev/shm/foo%02d.png /dev/shm/foo.ogg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import Video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video = Video.from_file(\"/scratch/snx3000/jfavre/foo.ogg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
