--- a/ParaView/ParaView-SMP-Contours.ipynb
+++ b/ParaView/ParaView-SMP-Contours.ipynb
@@ -78,7 +78,7 @@
     "  img_writer.Write()\n",
     "\n",
     "# save animage on the client-side\n",
-    "#SaveImage(\"/users/jfavre/foo2.png\")"
+    "#SaveImage(\"/dev/shm/foo2.png\")"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SaveImage(\"/users/jfavre/foo2.png\")"
+    "SaveImage(\"/dev/shm/foo2.png\")"
    ]
   },
   {
