updates-pv510-raytracing

--- a/RayTracing/RayTracing.ipynb
+++ b/RayTracing/RayTracing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tested Wed Mar 23 02:26:30 PM CET 2022 on Piz Daint"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,10 +23,12 @@
     "print(\"using materials: {:}\".format(mf1))\n",
     "materialLibrary1.LoadMaterials = mf1\n",
     "\n",
+    "# Tested Fri May 14 17:10:58 CEST 2021\n",
+    "\n",
     "def SaveImage(filename):\n",
     "  from vtk import vtkPNGWriter\n",
     "  img_writer = vtkPNGWriter()\n",
-    "  img_writer.SetInputConnection(disp.w2i.GetOutputPort())\n",
+    "  img_writer.SetInputConnection(pvdisp.w2i.GetOutputPort())\n",
     "  img_writer.SetFileName(filename)\n",
     "  img_writer.Write()"
    ]
@@ -71,6 +80,8 @@
     "renderView1.EnableRayTracing = 0 # Classic OpenGL\n",
     "renderView1.SamplesPerPixel = SamplesPerPixel\n",
     "renderView1.AdditionalLights = [light1, light2]\n",
+    "# we add our own material library to the existing library of materials already\n",
+    "# loaded by default.\n",
     "renderView1.OSPRayMaterialLibrary = materialLibrary1"
    ]
   },
@@ -89,14 +100,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if GetParaViewSourceVersion() >= \"paraview version 5.8.0\":\n",
-    "    from paraview.modules.vtkRemotingViews import vtkPVOpenGLInformation\n",
-    "else:\n",
-    "    from paraview.modules.vtkPVClientServerCoreRendering import vtkPVOpenGLInformation\n",
+    "Version = str(GetParaViewVersion())\n",
+    "info = GetOpenGLInformation(location=servermanager.vtkSMSession.RENDER_SERVER)\n",
     "\n",
-    "info = vtkPVOpenGLInformation()\n",
-    "info.CopyFromObject(None)\n",
+    "print(\"ParaView Version \", Version)\n",
     "print(\"Vendor:   %s\" % info.GetVendor())\n",
+    "OptiXEnabled = False\n",
+    "if info.GetVendor().split()[0] == 'NVIDIA':\n",
+    "  OptiXEnabled = True\n",
     "print(\"Version:  %s\" % info.GetVersion())\n",
     "print(\"Renderer: %s\" % info.GetRenderer())"
    ]
@@ -289,10 +300,10 @@
     "# import the PVDisplay widget, then instantiate one for renV\n",
     "\n",
     "from ipyparaview.widgets import PVDisplay\n",
-    "disp = PVDisplay(renderView1)\n",
+    "pvdisp = PVDisplay(renderView1)\n",
     "\n",
     "# show the widget once\n",
-    "display(disp)"
+    "display(pvdisp)"
    ]
   },
   {
@@ -350,7 +361,8 @@
    "outputs": [],
    "source": [
     "# Sixth do OSPRay rendering with shadows and a reflective material\n",
-    "MirrorsDisplay.OSPRayMaterial = 'copper'"
+    "#MirrorsDisplay.OSPRayMaterial = 'copper'\n",
+    "MirrorsDisplay.OSPRayMaterial = 'Metal_Copper_brushed'"
    ]
   },
   {
@@ -379,9 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Switching to OptiX 'pathtracer' Rendering\")\n",
-    "\n",
-    "renderView1.BackEnd = 'OptiX pathtracer'"
+    "if OptiXEnabled:\n",
+    "    renderView1.BackEnd = 'OptiX pathtracer'"
    ]
   },
   {
@@ -390,13 +401,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SaveImage(\"/scratch/snx3000/jfavre/raytracing.png\")"
+    "light1.Position = [50,50,-150]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interact\n",
+    "\n",
+    "def MoveLight(Z):\n",
+    "    light1.Position=[50,50,Z]\n",
+    "    \n",
+    "interact(MoveLight, Z=(-150,150))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
