--- a/RayTracing/PBR.ipynb
+++ b/RayTracing/PBR.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tested for Paraview v5.10.1 Tue Mar 15 02:51:54 PM CET 2022\n",
     "from ipywidgets import interact\n",
     "from paraview.simple import *\n",
     "import matplotlib.pyplot as plt\n",
@@ -89,10 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if GetParaViewSourceVersion() >= \"paraview version 5.8.0\":\n",
-    "    from paraview.modules.vtkRemotingViews import vtkPVOpenGLInformation\n",
-    "else:\n",
-    "    from paraview.modules.vtkPVClientServerCoreRendering import vtkPVOpenGLInformation\n",
+    "from paraview.modules.vtkRemotingViews import vtkPVOpenGLInformation\n",
     "\n",
     "info = vtkPVOpenGLInformation()\n",
     "info.CopyFromObject(None)\n",
@@ -201,7 +199,8 @@
     "Hide(plane3)\n",
     "\n",
     "cubemap = CreateTexture(imgFileName)\n",
-    "renderView1.UseSkyboxBackground = 1\n",
+    "renderView1.UseColorPaletteForBackground = 0\n",
+    "renderView1.BackgroundColorMode = 'Skybox'\n",
     "renderView1.UseEnvironmentLighting = 1\n",
     "renderView1.BackgroundTexture = cubemap"
    ]
@@ -216,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
