--- a/RayTracing/ThreeTeapots.Depth-of-field.ipynb
+++ b/RayTracing/ThreeTeapots.Depth-of-field.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "A demonstration created by Jean M. Favre, Swiss National Supercomputing Center.\n",
     "\n",
-    "Tested on Piz Daint, with ParaView 5.8.1"
+    "Tested on Piz Daint, with ParaView 5.10.1\n",
+    "Tue Mar 15 02:51:54 PM CET 2022"
    ]
   },
   {
@@ -75,10 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if GetParaViewSourceVersion() >= \"paraview version 5.8.0\":\n",
-    "    from paraview.modules.vtkRemotingViews import vtkPVOpenGLInformation\n",
-    "else:\n",
-    "    from paraview.modules.vtkPVClientServerCoreRendering import vtkPVOpenGLInformation\n",
+    "from paraview.modules.vtkRemotingViews import vtkPVOpenGLInformation\n",
     "\n",
     "info = vtkPVOpenGLInformation()\n",
     "info.CopyFromObject(None)\n",
@@ -176,10 +174,10 @@
     "# import the PVDisplay widget, then instantiate one for renV\n",
     "\n",
     "from ipyparaview.widgets import PVDisplay\n",
-    "disp = PVDisplay(renderView1)\n",
+    "pvdisp = PVDisplay(renderView1)\n",
     "\n",
     "# show the widget once\n",
-    "display(disp)"
+    "display(pvdisp)"
    ]
   },
   {
@@ -297,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -311,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
