--- a/ParaView/ParaView-SMP-Contours.ipynb
+++ b/ParaView/ParaView-SMP-Contours.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tested ParaView 5.10 Wed Mar 23 15:55:39 CET 2022"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,7 +22,8 @@
    "source": [
     "from paraview.simple import *\n",
     "from paraview.modules.vtkRemotingCore import vtkProcessModule\n",
-    "# Tested Mon 10 May 2021 12:47:06 PM CEST"
+    "# Tested eiger Thu Feb 17 09:20:06 CET 2022\n",
+    "# Tested daint Thu Mar 10 08:51:11 CET 2022"
    ]
   },
   {
@@ -34,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = ImageReader(FileNames=['/scratch/snx3000/jfavre/NVIDIA/50.density-log_1024x1024x2048_float.raw'])\n",
+    "reader = ImageReader(FileNames=['/scratch/snx3000/jfavre/50.density-log_1024x1024x2048_float.raw'])\n",
     "reader.DataScalarType = 'float'\n",
     "reader.DataByteOrder = 'LittleEndian'\n",
     "reader.DataExtent = [0, 2047, 0, 1023, 0, 1023]\n",
@@ -108,7 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LoadPlugin(\"/apps/daint/UES/jenkins/7.0.UP02-20.11/gpu/easybuild/software/ParaView/5.9.0-CrayGNU-20.11-EGL-python3/lib64/paraview-5.9/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\", ns=globals())"
+    "#LoadPlugin(\"/apps/daint/UES/jenkins/7.0.UP02-20.11/gpu/easybuild/software/ParaView/5.9.0-CrayGNU-20.11-EGL-python3/lib64/paraview-5.9/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\", ns=globals())\n",
+    "fname = \"/apps/pilatus/UES/jenkins/1.4.0/software/ParaView/5.10.0-cpeCray-21.12-OSMesa/lib64/paraview-5.10/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\"\n",
+    "fname = \"/apps/daint/UES/jenkins/7.0.UP03/21.09/daint-gpu/software/ParaView/5.10.0-CrayGNU-21.09-EGL/lib/paraview-5.10/plugins/AcceleratedAlgorithms/AcceleratedAlgorithms.so\"\n",
+    "LoadPlugin(fname, ns=globals())"
    ]
   },
   {
@@ -165,7 +176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
