turned off EGL warnings

--- a/ParaView/XArrays-ParaView-Import.ipynb
+++ b/ParaView/XArrays-ParaView-Import.ipynb
@@ -7,11 +7,11 @@
     "# Importing data from xarray\n",
     "\n",
     "Written by Jean M Favre, Swiss National Supercomputing Center, to demonstrate the use of the\n",
-    "vtkGridConstructors to import xarray arrays andmake a spherical shell\n",
+    "vtkGridConstructors to import xarray arrays and make a spherical shell\n",
     "\n",
     "The data is the first step of a time-series provided by https://scivis2021.netlify.app/\n",
     "\n",
-    "Tested on Piz Daint Tue 27 Apr 2021 10:01:18 AM CEST"
+    "Tested on Piz Daint Tue Aug 23 09:28:09 CEST 2022"
    ]
   },
   {
@@ -23,6 +23,11 @@
     "from paraview.simple import *\n",
     "import numpy as np\n",
     "import sys\n",
+    "\n",
+    "# to turn off some annoying warnings\n",
+    "from vtkmodules.vtkCommonCore import vtkLogger\n",
+    "vtkLogger.SetStderrVerbosity(vtkLogger.VERBOSITY_OFF)\n",
+    "\n",
     "sys.path.append(\"/users/jfavre/Projects/ParaView/Python\")\n",
     "from vtkGridConstructors import vtkStructuredGridFromArrays\n",
     "from vtk.numpy_interface import algorithms as algs"
@@ -88,7 +93,7 @@
     "pVTrivialProducer2.UpdatePipeline()\n",
     "\n",
     "rep2 = Show(pVTrivialProducer2)\n",
-    "rep2.Representation = 'Surface With Edges'\n"
+    "rep2.Representation = 'Surface With Edges'"
    ]
   },
   {
@@ -106,7 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ResetCamera()"
+    "ResetCamera()\n",
+    "GetActiveCamera().Dolly(2)"
    ]
   },
   {
@@ -141,27 +147,13 @@
     "rep3.Representation='Surface'\n",
     "ColorBy(rep3, \"temperature\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "myenv-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
